--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
 
 body {
   margin: -3vmin 0;
-  background-color: var(--tan-4);
+  background-color: tan;
   height: 100vh;
 }
 
@@ -67,7 +67,8 @@ button, a.button {
   margin: 1vmin;
   padding: 1vmin;
   color: var(--white);
-  background-color: var(--orange);
+  background-color: white;
+  color: black;
   font-size: 2vmin;
   font-weight: bold;
   text-decoration: none;
