--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -1,20 +1,20 @@
 .ProductList {
-    display: grid;
-    grid-template-columns: repeat(3, 25vw);
-    width: 100%;
-    row-gap: 10vmin;
-    column-gap: 10vmin;
-    margin: 10vmin auto 10vmin;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 5vmin;
-  }
-  
+  display: grid;
+  grid-template-columns: repeat(3, 20vw);
+  width: 100%;
+  height: 100%;
+  row-gap: 10vmin;
+  column-gap: 10vmin;
+  margin: 10vmin auto 10vmin;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5vmin;
+}
 
-  @media screen and (max-width: 480px) {
-    .ProductList {
-      grid-template-columns: repeat(3, 20vw);
-      font-size: 3vmin;
-    }
 
+@media screen and (max-width: 480px) {
+  .ProductList {
+    grid-template-columns: repeat(3, 20vw);
+    font-size: 3vmin;
   }
+}
